# MCC

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
run/: cpu.arch  test.mcc
src/: MccToken.cpp  main.cpp  mccRegister.cpp  mccRegister.h  mccState.cpp  mccState.h  mccStateMachine.cpp  mccStateMachine.h  mccToken.cpp  mccToken.h  mccTokenStream.cpp  mccTokenStream.h  mccVectorStream.cpp  mccVectorStream.h
